--- a/wp-content/themes/seo-main/src/scss/components/_header.scss
+++ b/wp-content/themes/seo-main/src/scss/components/_header.scss
@@ -147,7 +147,7 @@ header {
 }
 
 .c-nav__donate-link {
-  height: 60px;
+  height: 50px;
   background: $red;
   padding: 0 25px;
 
@@ -166,7 +166,7 @@ header {
   }
 
   padding: 0 26px;
-  line-height: 3.75;
+  line-height: 2.9;
 
   span {
     margin-top: 15px;
